bugfix{DELWAQ-400] Report data point where time is not in ascending order

--- a/src/engines_gpl/waq/packages/delwaq1/CMakeLists.txt
+++ b/src/engines_gpl/waq/packages/delwaq1/CMakeLists.txt
@@ -36,6 +36,7 @@ set(oss_dependencies_general deltares_common
                              nefis
                              delwaq_lib
                              waq_io
+                             waq_validation
                              waq_data
                              waq_kernel
                              waq_plugin_wasteload
