Revert "Remove io_netcdf dependency of part"
This reverts commit 0847163eaca52a91e89ecef2b153f0ec3ffafe30.

--- a/src/engines_gpl/part/packages/data_f/CMakeLists.txt
+++ b/src/engines_gpl/part/packages/data_f/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(${library_name} ${source_files})
 
 # Add dependencies
 set(oss_dependencies deltares_common
+                     io_netcdf
                      io_hyd)
 
 target_link_libraries(${library_name} ${oss_dependencies})
