--- a/src/engines_gpl/part/packages/io_f/CMakeLists.txt
+++ b/src/engines_gpl/part/packages/io_f/CMakeLists.txt
@@ -14,6 +14,7 @@ set(oss_dependencies deltares_common
                      part_data_f
                      part_utils_f
                      waq_utils_f
+                     io_netcdf
                      io_hyd)
 
 
