--- a/src/engines_gpl/part/packages/kernel_f/CMakeLists.txt
+++ b/src/engines_gpl/part/packages/kernel_f/CMakeLists.txt
@@ -16,6 +16,7 @@ set(oss_dependencies deltares_common
                      gridgeom
                      kdtree_wrapper
                      kdtree2
+                     io_netcdf
                      io_hyd)
 
 
