--- a/src/engines_gpl/waq/packages/waq_utils_f/CMakeLists.txt
+++ b/src/engines_gpl/waq/packages/waq_utils_f/CMakeLists.txt
@@ -6,14 +6,8 @@ set(waq_version_path ${waq_root_path}/version)
 set(version_include_dir ${CMAKE_SOURCE_DIR}/../version_includes)
 set(fortran_static_version_file ${CMAKE_CURRENT_SOURCE_DIR}/waq_utils/static_version_info.f90)
 
-# Set directory which contains all source files
-set(src_path src)
-
-set(waq_utils_path ${src_path})
-get_fortran_source_files(${waq_utils_path} waq_utils_source)
-
 set(library_name waq_utils_f)
-add_library(${library_name} ${waq_utils_source})
+create_library(${library_name} ${CMAKE_CURRENT_SOURCE_DIR} src)
 
 # Set dependencies
 set(oss_dependencies deltares_common
@@ -42,8 +36,5 @@ target_include_directories(${library_name}  PRIVATE ${mpi_include_path}/
                                                     "${CMAKE_CURRENT_SOURCE_DIR}/../../include"
                                                     ${version_include_dir}
                                                     ${waq_version_path})
-
-# Define how the files should be structured in Visual studio
-source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${waq_utils_source})
 
 set_target_properties (${library_name} PROPERTIES FOLDER engines_gpl/waq)
