UNST-7291 cleaned up cmake comments after a hasty merge

--- a/src/tools_gpl/dfmoutput/CMakeLists.txt
+++ b/src/tools_gpl/dfmoutput/CMakeLists.txt
@@ -22,10 +22,6 @@ if (UNIX)
     # the `pkg_check_modules` function is created with this call
     find_package(PkgConfig REQUIRED)
 
-    # these calls create special `PkgConfig::<MODULE>` variables
-    #pkg_check_modules(NETCDF REQUIRED IMPORTED_TARGET netcdf)
-    #pkg_check_modules(NETCDF_FTN REQUIRED IMPORTED_TARGET netcdf-fortran)
-
     set(oss_dependencies deltares_common 
                          io_netcdf 
                          FLAP
@@ -35,10 +31,7 @@ if (UNIX)
     oss_include_libraries(${executable_name} oss_dependencies)
 
     target_link_libraries(${executable_name}
-         ${oss_dependencies}
-         #PkgConfig::NETCDF
-         #PkgConfig::NETCDF_FTN
-         )
+                          ${oss_dependencies})
 endif(UNIX)
 
 if (WIN32)
