--- a/src/tools_gpl/dfm_volume_tool/packages/dfm_volume_tool/CMakeLists.txt
+++ b/src/tools_gpl/dfm_volume_tool/packages/dfm_volume_tool/CMakeLists.txt
@@ -21,10 +21,6 @@ if (UNIX)
     # the `pkg_check_modules` function is created with this call
     find_package(PkgConfig REQUIRED)
 
-    # these calls create special `PkgConfig::<MODULE>` variables
-   # pkg_check_modules(NETCDF REQUIRED IMPORTED_TARGET netcdf)
-   # pkg_check_modules(NETCDF_FTN REQUIRED IMPORTED_TARGET netcdf-fortran)
-
     set(oss_dependencies deltares_common 
                          deltares_common_c
                          dflowfm_kernel
@@ -39,10 +35,7 @@ if (UNIX)
     oss_include_libraries(${executable_name} oss_dependencies)
 
     target_link_libraries(${executable_name}
-         ${oss_dependencies}
-       #  PkgConfig::NETCDF
-       #  PkgConfig::NETCDF_FTN
-       )
+         ${oss_dependencies})
 endif(UNIX)
 
 if (WIN32)
