Resolve DELWAQ-542 "All/feature/ compile delwaq on ubuntu"

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@ install_*/**
 # ignore files created by updating process definition files
 src/engines_gpl/waq/resources/csvFiles/*
 !src/engines_gpl/waq/resources/csvFiles/*.csv
+
+
+# ignore FortranCInterface header files created on linux
+src/**/config.h
+src/**/FortranCInterface.h
