Enable compilation of Delft3d4 on Alma8

--- a/src/engines_gpl/flow2d3d/packages/flow2d3d_data/CMakeLists.txt
+++ b/src/engines_gpl/flow2d3d/packages/flow2d3d_data/CMakeLists.txt
@@ -99,15 +99,14 @@ if (UNIX)
 
     # these calls create special `PkgConfig::<MODULE>` variables
     pkg_check_modules(NETCDF REQUIRED IMPORTED_TARGET netcdf)
-    pkg_check_modules(NETCDF_FTN REQUIRED IMPORTED_TARGET netcdf-fortran)
 
-    set(oss_dependencies ${oss_dependencies_general})
+    set(oss_dependencies ${oss_dependencies_general}
+                         netcdff)
 
     target_link_libraries(${library_name}
          ${oss_dependencies}
-         PkgConfig::NETCDF
-         PkgConfig::NETCDF_FTN)
-    add_definitions(-DHAVE_CONFIG_H)
+         PkgConfig::NETCDF)
+    add_definitions(-DHAVE_CONFIG_H)        
 endif(UNIX)
 if (WIN32)
     set(oss_dependencies ${oss_dependencies_general}
