--- a/src/engines_gpl/flow2d3d/packages/flow2d3d_io_dol_f/CMakeLists.txt
+++ b/src/engines_gpl/flow2d3d/packages/flow2d3d_io_dol_f/CMakeLists.txt
@@ -49,15 +49,13 @@ if (UNIX)
 
     # these calls create special `PkgConfig::<MODULE>` variables
     pkg_check_modules(NETCDF REQUIRED IMPORTED_TARGET netcdf)
-    pkg_check_modules(NETCDF_FTN REQUIRED IMPORTED_TARGET netcdf-fortran)
 
-    set(oss_dependencies ${oss_dependencies_general})
+    set(oss_dependencies ${oss_dependencies_general}
+                         netcdff)
 
     target_link_libraries(${library_name}
          ${oss_dependencies}
-         PkgConfig::NETCDF
-         PkgConfig::NETCDF_FTN)
-
+         PkgConfig::NETCDF)
 endif(UNIX)
 if (WIN32)
     set(oss_dependencies ${oss_dependencies_general}
