--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ src/engines_gpl/waq/resources/csvFiles/*
 # ignore FortranCInterface header files created on linux
 src/**/config.h
 src/**/FortranCInterface.h
+
+.pre-commit-config.yaml
+install.sh
