--- a/src/engines_gpl/waq/waq_io/CMakeLists.txt
+++ b/src/engines_gpl/waq/waq_io/CMakeLists.txt
@@ -1,12 +1,11 @@
-# Set path for include files
+set(library_name waq_io)
+
 # Note that the CMAKE_CURRENT_SOURCE_DIR has a path to THIS CMakeLists location
 set(waq_io_include_path ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
 include_directories(${waq_io_include_path})
 
-# Define the library
-set(library_name waq_io)
 
-create_library_recursive(${library_name} ${CMAKE_CURRENT_SOURCE_DIR} .)
+create_target(${library_name} ${CMAKE_CURRENT_SOURCE_DIR} src_dir . recursive)
 
 # Set dependencies
 set(oss_dependencies part_data_f
@@ -20,5 +19,5 @@ set(oss_dependencies part_data_f
 target_link_libraries(${library_name} ${oss_dependencies})
 
 # Set additional compilation properties
-target_compile_options(${library_name} PRIVATE "${waq_default_flags}")
+target_compile_options(${library_name} PRIVATE ${waq_default_flags})
 set_target_properties(${library_name} PROPERTIES FOLDER engines_gpl/waq)
