--- a/src/tools_gpl/waq_tools/ddcouple/CMakeLists.txt
+++ b/src/tools_gpl/waq_tools/ddcouple/CMakeLists.txt
@@ -1,23 +1,20 @@
-# Set version file variables
-set(waq_root_path ${CMAKE_SOURCE_DIR}/../engines_gpl/waq) # Trace back to the WAQ path
+set(executable_name ddcouple)
+
+set(waq_root_path ${CMAKE_SOURCE_DIR}/../engines_gpl/waq)
 set(rc_version_file ${waq_root_path}/resources/version/version_number_ddcouple.rc)
 set(version_include_dir ${CMAKE_SOURCE_DIR}/../version_includes)
 
-# Set directory which contains all source files
-set(src_path .)
-
-# Gather source files
-get_fortran_source_files(${src_path} source)
-
-# Define executable
-set(executable_name ddcouple)
-add_executable(${executable_name} ${source}
-                                  ${rc_version_file})
+create_target(
+        ${executable_name}
+        ${CMAKE_CURRENT_SOURCE_DIR}
+        src_dir .
+        resource_files ${rc_version_file}
+        target_type "executable"
+)
 
 # Add dependencies
-target_include_directories(${executable_name} PRIVATE ${waq_data_path} ${version_include_dir})
-set(oss_dependencies waq_definition
-                     deltares_common
+target_include_directories(${executable_name} PRIVATE ${version_include_dir})
+set(oss_dependencies deltares_common
                      io_netcdf
                      io_hyd
                      waq_hyd_data
@@ -26,13 +23,7 @@ set(oss_dependencies waq_definition
 oss_include_libraries(${executable_name} oss_dependencies)
 target_link_libraries(${executable_name} ${oss_dependencies})
 
-if(UNIX)
-    message(STATUS "Setting target_compile_definitions in Unix")
-    set_property(TARGET ${executable_name} PROPERTY LINKER_LANGUAGE Fortran)
-endif(UNIX)
-
 # Define how the files should be structured within Visual Studio
-source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${source})
 set_target_properties (${executable_name} PROPERTIES FOLDER tools_gpl/ddcouple)
 
 target_compile_options(${executable_name} PRIVATE "${waq_default_flags}")
