--- a/src/engines_gpl/part/delpar/CMakeLists.txt
+++ b/src/engines_gpl/part/delpar/CMakeLists.txt
@@ -1,22 +1,18 @@
-# Set version file variables
-set(waq_root_path ${CMAKE_SOURCE_DIR}/../engines_gpl/waq) # Trace back to the WAQ path
-set(waq_version_path ${waq_root_path}/resources/version)
-set(version_include_dir ${CMAKE_SOURCE_DIR}/../version_includes)
+set(executable_name delpar)
 
+
+set(waq_root_path ${CMAKE_SOURCE_DIR}/../engines_gpl/waq)
+set(waq_version_path ${waq_root_path}/resources/version)
 set(rc_version_file ${waq_version_path}/version_number_delpar.rc)
+set(version_include_dir ${CMAKE_SOURCE_DIR}/../version_includes)
 set(icon_file ${waq_version_path}/part_icon.rc)
 
-# Set directory which contains all source files
-set(src_path .)
-
-# Gather source files
-get_fortran_source_files(${src_path} source)
-
-# Define executable
-set(executable_name delpar)
-add_executable(${executable_name} ${source}
-    ${icon_file}
-    ${rc_version_file})
+create_target(
+        ${executable_name} ${CMAKE_CURRENT_SOURCE_DIR}
+        src_dir .
+        resource_files ${icon_file} ${rc_version_file}
+        target_type "executable"
+)
 
 # Add dependencies
 set(oss_dependencies part_data_f
@@ -26,11 +22,10 @@ target_link_libraries(${executable_name} ${oss_dependencies})
 target_include_directories(${executable_name} PRIVATE ${waq_data_path} ${version_include_dir})
 
 # Set additional compilation properties
-target_compile_options(${executable_name} PRIVATE "${waq_default_flags}")
+target_compile_options(${executable_name} PRIVATE ${waq_default_flags})
 
 if(UNIX)
     target_link_options(${executable_name} PRIVATE ${openmp_flag})
-    set_property(TARGET ${executable_name} PROPERTY LINKER_LANGUAGE Fortran)
 endif(UNIX)
 
 if(WIN32)
@@ -49,9 +44,6 @@ if(WIN32)
 endif(WIN32)
 
 # Define how the files should be structured within Visual Studio
-source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${source})
-source_group(Resources FILES ${icon_file}
-    ${rc_version_file})
 target_compile_options(${executable_name} PRIVATE ${openmp_flag})
 set_target_properties(${executable_name} PROPERTIES FOLDER engines_gpl/part)
 
