--- a/src/engines_gpl/waq/delwaq1/CMakeLists.txt
+++ b/src/engines_gpl/waq/delwaq1/CMakeLists.txt
@@ -1,42 +1,33 @@
-# Set directory which contains all source files
-set(src_path .)
+set(executable_name delwaq1)
 
-# Set version file variables
-set(waq_root_path ${CMAKE_CURRENT_SOURCE_DIR}/../) # Trace back to the WAQ path
-
-# Set version file variables
+set(waq_root_path ${CMAKE_CURRENT_SOURCE_DIR}/../)
 set(waq_version_path ${waq_root_path}/resources/version)
-set(version_include_dir ${CMAKE_SOURCE_DIR}/../version_includes)
+set(waq_data_path ${waq_root_path}/include)
 set(rc_version_file ${waq_version_path}/version_number_delwaq1.rc)
-
-# Gather source files
-get_fortran_source_files(${src_path} source)
+set(version_include_dir ${CMAKE_SOURCE_DIR}/../version_includes)
 
 # Set icon file
 set(icon_file ${waq_version_path}/waq_icon.rc)
 
-# Define executable
-set(executable_name delwaq1)
-add_executable(${executable_name} ${source}
-                                  ${icon_file}
-                                  ${rc_version_file})
+create_target(
+        ${executable_name} ${CMAKE_CURRENT_SOURCE_DIR}
+        src_dir .
+        resource_files ${icon_file} ${rc_version_file}
+        target_type "executable"
+)
 
 # Add dependencies
 set(oss_dependencies delwaq_lib)
-
 target_link_libraries(${executable_name} ${oss_dependencies})
 
 # Set additional compilation properties
-target_compile_options(${executable_name} PRIVATE "${waq_default_flags}")
+target_compile_options(${executable_name} PRIVATE ${waq_default_flags})
 
 if(UNIX)
     target_include_directories(${executable_name} PRIVATE ${waq_data_path} ${version_include_dir})
-
     message(STATUS "netcdf lib dir is ${NETCDF_LIBRARY_DIRS}")
     target_link_directories(${executable_name} PRIVATE ${NETCDF_LIBRARY_DIRS})
-
     target_link_options(${executable_name} PRIVATE ${openmp_flag})
-    set_property(TARGET ${executable_name} PROPERTY LINKER_LANGUAGE Fortran)
 endif(UNIX)
 
 if (WIN32)
@@ -49,7 +40,6 @@ if (WIN32)
                             "${mpi_library_path}"
                             "${checkout_src_root}/third_party_open/netcdf/${netcdf_version}/lib"
                             "${checkout_src_root}/third_party_open/pthreads/bin/x64")
-
 
     target_link_libraries(${executable_name}
                             "comctl32.lib"
@@ -67,17 +57,11 @@ if (WIN32)
     # Set linker options
     message(STATUS "Setting target_link_options in windows")
     target_link_options(${executable_name} PRIVATE ${nologo_flag})
-endif(WIN32)
-
-# Define how the files should be structured within Visual Studio
-source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${source_files})
-source_group(Resources FILES    ${icon_file}
-                                ${rc_version_file})
-target_compile_options(${executable_name} PRIVATE ${openmp_flag})
-set_target_properties(${executable_name} PROPERTIES FOLDER engines_gpl/waq)
-if (WIN32)
     set_target_properties(${executable_name} PROPERTIES LINK_FLAGS "/LARGEADDRESSAWARE /STACK:20000000")
 endif(WIN32)
+
+target_compile_options(${executable_name} PRIVATE ${openmp_flag})
+set_target_properties(${executable_name} PROPERTIES FOLDER engines_gpl/waq)
 
 # Set post-build step
 set(install_dir ${CMAKE_BINARY_DIR})
