--- a/src/engines_gpl/waq/waq_data/CMakeLists.txt
+++ b/src/engines_gpl/waq/waq_data/CMakeLists.txt
@@ -1,9 +1,7 @@
-# Define the library
 set(library_name waq_data)
 
-create_library(${library_name} ${CMAKE_CURRENT_SOURCE_DIR} .)
+create_target(${library_name} ${CMAKE_CURRENT_SOURCE_DIR} src_dir .)
 
 # Set additional compilation properties
-target_compile_options(${library_name} PRIVATE "${waq_default_flags}")
-
+target_compile_options(${library_name} PRIVATE ${waq_default_flags})
 set_target_properties (${library_name} PROPERTIES FOLDER engines_gpl/waq)
