--- a/src/engines_gpl/waq/waq_memory/CMakeLists.txt
+++ b/src/engines_gpl/waq/waq_memory/CMakeLists.txt
@@ -1,6 +1,6 @@
-# Define library
 set(library_name waq_memory)
-create_library(${library_name} ${CMAKE_CURRENT_SOURCE_DIR} .)
+
+create_target(${library_name} ${CMAKE_CURRENT_SOURCE_DIR} src_dir .)
 
 # Set dependencies
 set(oss_dependencies deltares_common
@@ -10,8 +10,8 @@ set(oss_dependencies deltares_common
 target_link_libraries(${library_name} ${oss_dependencies})
 
 # Set additional compilation properties
-target_compile_options(${library_name} PRIVATE "${openmp_flag}")
-target_compile_options(${library_name} PRIVATE "${qauto_threaded_flags}")
-target_compile_options(${library_name} PRIVATE "${waq_default_flags}")
+target_compile_options(${library_name} PRIVATE ${openmp_flag})
+target_compile_options(${library_name} PRIVATE ${qauto_threaded_flags})
+target_compile_options(${library_name} PRIVATE ${waq_default_flags})
 
 set_target_properties (${library_name} PROPERTIES FOLDER engines_gpl/waq)
