--- a/src/engines_gpl/waq/waq_process/CMakeLists.txt
+++ b/src/engines_gpl/waq/waq_process/CMakeLists.txt
@@ -1,7 +1,6 @@
-# Define library
 set(library_name waq_process)
 
-create_library_recursive(${library_name} ${CMAKE_CURRENT_SOURCE_DIR} .)
+create_target(${library_name} ${CMAKE_CURRENT_SOURCE_DIR} src_dir . target_type "library" recursive)
 # Set dependencies
 set(oss_dependencies waq_definition
                      deltares_common
@@ -16,10 +15,10 @@ set(oss_dependencies waq_definition
 target_link_libraries(${library_name} ${oss_dependencies})
 
 
-target_include_directories(${library_name}  PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../../include")
+target_include_directories(${library_name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
 
 # Set additional compilation properties
-target_compile_options(${library_name} PRIVATE "${qauto_threaded_flags}")
-target_compile_options(${library_name} PRIVATE "${waq_default_flags}")
+target_compile_options(${library_name} PRIVATE ${qauto_threaded_flags})
+target_compile_options(${library_name} PRIVATE ${waq_default_flags})
 
 set_target_properties (${library_name} PROPERTIES FOLDER engines_gpl/waq)
