--- a/src/engines_gpl/waq/waq_validation/CMakeLists.txt
+++ b/src/engines_gpl/waq/waq_validation/CMakeLists.txt
@@ -1,6 +1,7 @@
-# Define library
 set(library_name waq_validation)
-create_library(${library_name} ${CMAKE_CURRENT_SOURCE_DIR} .)
+
+create_target(${library_name} ${CMAKE_CURRENT_SOURCE_DIR} src_dir .)
+
 
 # Set dependencies
 set(oss_dependencies waq_utils_f
