--- a/src/engines_gpl/waq/wq_processes/CMakeLists.txt
+++ b/src/engines_gpl/waq/wq_processes/CMakeLists.txt
@@ -1,27 +1,14 @@
-# Set directory which contains all source files
-set(src_path .)
+set(library_name wq_processes)
 
 # Set version file variables
-set(waq_root_path ${CMAKE_CURRENT_SOURCE_DIR}/../) # Trace back to the WAQ path
-
-# Set version file variables
+set(waq_root_path ${CMAKE_CURRENT_SOURCE_DIR}/../)
 set(rc_version_file ${waq_root_path}/resources/version/version_number.rc)
 set(version_include_dir ${CMAKE_SOURCE_DIR}/../version_includes)
-set(fortran_version_file_delwaq ${waq_root_path}/packages/waq_utils_f/src/delwaq_version.F90)
 
-# Gather source files
-get_fortran_source_files(${src_path} source)
+create_target(${library_name} ${CMAKE_CURRENT_SOURCE_DIR} src_dir . resource_files ${rc_version_file})
 
-# Define library
-set(library_name wq_processes)
-add_library(${library_name} ${source}
-                            ${rc_version_file})
-
-
-# Define additional compilation flags
-set_source_files_properties(${fortran_version_file}
-                            PROPERTIES COMPILE_OPTIONS "${file_preprocessor_flag}")
-
+# Link libraries
+target_link_libraries(${library_name} ${oss_dependencies})
 
 # Set dependencies
 set(oss_dependencies waq_definition
@@ -36,9 +23,8 @@ set(oss_dependencies ${oss_dependencies})
 oss_include_libraries(${library_name} oss_dependencies)
 
 # Set additional compilation properties
-target_compile_options(${library_name} PRIVATE "${waq_default_flags}")
+target_compile_options(${library_name} PRIVATE ${waq_default_flags})
 target_include_directories(${library_name}  PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include ${version_include_dir})
 
 # Define how the files should be structured in Visual studio
-source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES  ${source})
 set_target_properties (${library_name} PROPERTIES FOLDER engines_gpl/waq)
