--- a/src/tools_gpl/waq_tools/maptonetcdf/CMakeLists.txt
+++ b/src/tools_gpl/waq_tools/maptonetcdf/CMakeLists.txt
@@ -1,21 +1,11 @@
+set(executable_name maptonetcdf)
+
 # Set version file variables
 set(waq_root_path ${CMAKE_SOURCE_DIR}/../engines_gpl/waq) # Trace back to the WAQ path
 set(rc_version_file ${waq_root_path}/resources/version/version_number_maptonetcdf.rc)
 set(version_include_dir ${CMAKE_SOURCE_DIR}/../version_includes)
 
-# Set source directory
-set(src_path .)
-
-# Gather source files
-get_fortran_source_files(${src_path} source)
-
-# Define executable
-set(executable_name maptonetcdf)
-add_executable(${executable_name} ${source}
-                                  ${rc_version_file})
-
-set_source_files_properties(${fortran_version_file_delwaq}
-                            PROPERTIES COMPILE_OPTIONS "${file_preprocessor_flag}")
+create_target(${executable_name} ${CMAKE_CURRENT_SOURCE_DIR} src_dir . resource_files ${rc_version_file} target_type "executable")
 
 set(oss_dependencies_general waq_definition waq_kernel)
 
@@ -55,9 +45,6 @@ target_compile_options(${executable_name} PRIVATE "${waq_default_flags}")
 if(UNIX)
     message(STATUS "netcdf lib dir is ${NETCDF_LIBRARY_DIRS}")
     target_link_directories(${executable_name} PRIVATE ${NETCDF_LIBRARY_DIRS})
-
-    message(STATUS "Setting target_compile_definitions in Unix")
-    set_property(TARGET ${executable_name} PROPERTY LINKER_LANGUAGE Fortran)
 endif(UNIX)
 
 if (WIN32)
@@ -77,7 +64,6 @@ if (WIN32)
 endif(WIN32)
 
 # Define how the files should be structured within Visual Studio
-source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${source})
 set_target_properties (${executable_name} PROPERTIES FOLDER tools_gpl/maptonetcdf)
 
 # Set post-build step
