--- a/src/tools_gpl/waq_tools/waqmerge/CMakeLists.txt
+++ b/src/tools_gpl/waq_tools/waqmerge/CMakeLists.txt
@@ -1,46 +1,57 @@
-# Set version file variables
+set(executable_name waqmerge)
+
 set(waq_root_path ${CMAKE_SOURCE_DIR}/../engines_gpl/waq) # Trace back to the WAQ path
 set(rc_version_file ${waq_root_path}/resources/version/version_number_waqmerge.rc)
 set(version_include_dir ${CMAKE_SOURCE_DIR}/../version_includes)
 
-# Set directory which contains all source files
-set(src_path .)
-
-# Gather source files
-get_fortran_source_files(${src_path} source)
-
-# Define executable
-set(executable_name waqmerge)
-add_executable(${executable_name} ${source}
-                                  ${rc_version_file})
-
-set(oss_dependencies deltares_common
-                     io_netcdf
-                     io_netcdf_data
-                     io_hyd
-                     waq_hyd_data
-                     waq_utils_f)
+create_target(
+        ${executable_name} ${CMAKE_CURRENT_SOURCE_DIR}
+        src_dir .
+        resource_files ${rc_version_file}
+        target_type "executable"
+)
 
 # Add dependencies
 target_include_directories(${executable_name} PRIVATE ${version_include_dir})
-
 if (UNIX)
+
+    set(oss_dependencies deltares_common
+                         io_netcdf
+                         io_netcdf_data
+                         io_hyd
+                         waq_hyd_data
+                         waq_utils_f)
+
+    oss_include_libraries(${executable_name} oss_dependencies)
+
     target_link_libraries(${executable_name}
          ${oss_dependencies}
          netcdf
          netcdff)
-
-    message(STATUS "netcdf lib dir is ${NETCDF_LIBRARY_DIRS}")
-    target_link_directories(${executable_name} PRIVATE ${NETCDF_LIBRARY_DIRS})
-
-    message(STATUS "Setting target_compile_definitions in Unix")
-    set_property(TARGET ${executable_name} PROPERTY LINKER_LANGUAGE Fortran)
-
 endif(UNIX)
 
 if (WIN32)
+    set(oss_dependencies deltares_common
+                         deltares_common_c
+                         io_netcdf
+                         io_netcdf_data
+                         io_hyd
+                         waq_hyd_data
+                         netcdf4
+                         netcdff
+                         waq_utils_f)
+
+    oss_include_libraries(${executable_name} oss_dependencies)
     target_link_libraries(${executable_name} ${oss_dependencies})
-    target_compile_definitions(${executable_name} PRIVATE WIN64)
+endif(WIN32)
+
+if(UNIX)
+    message(STATUS "netcdf lib dir is ${NETCDF_LIBRARY_DIRS}")
+    target_link_directories(${executable_name} PRIVATE ${NETCDF_LIBRARY_DIRS})
+endif(UNIX)
+
+if (WIN32)
+   target_compile_definitions(${executable_name} PRIVATE WIN64)
 endif(WIN32)
 
 target_link_libraries(${executable_name} netcdf)
@@ -58,7 +69,6 @@ endif(WIN32)
 
 
 # Define how the files should be structured within Visual Studio
-source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${source})
 set_target_properties (${executable_name} PROPERTIES FOLDER tools_gpl/waqmerge)
 
 target_compile_options(${executable_name} PRIVATE "${waq_default_flags}")
